<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
            android:key="session_service_url"
            android:title="@string/title_session_service_url"
            android:defaultValue="@string/session_service_url"
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1" android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:id="@+id/session_service_url"/>
    <EditTextPreference
            android:key="generic_modal_url"
            android:title="@string/title_generic_modal_url"
            android:defaultValue="@string/generic_modal_url"
            android:selectAllOnFocus="true"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1" android:id="@+id/generic_modal_url"/>
</PreferenceScreen>
