<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View"/>
        <import type="com.digitalpayments.android.sample.AmountConverter"/>
        <import type="com.digitalpayments.android.sample.PaymentCategoryConverter"/>
        <import type="com.digitalpayments.android.sample.FeeContextConverter"/>
        <variable
                name="makePaymentRequest"
                type="com.digitalpayments.android.sdk.models.MakePaymentRequest"/>
    </data>
    <android.support.constraint.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".kotlinSample.MakePaymentKotlinSampleActivity">
        <ScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
            <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         android:id="@+id/linearLayout">
                <EditText
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/policyHolderName"
                        android:hint="@string/title_policy_holder_name"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintBottom_toTopOf="@+id/paymentCategory"
                        android:singleLine="true"
                        tools:ignore="Autofill"
                        android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:text="@={makePaymentRequest.policyHolderName}"/>
                <Spinner
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:id="@+id/paymentCategory"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/policyHolderName"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintBottom_toTopOf="@+id/feeContext"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                        android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:selectedItemPosition="@={PaymentCategoryConverter.toInt(makePaymentRequest.paymentCategory)}"/>
                <Spinner
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:id="@+id/feeContext"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/paymentCategory"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintBottom_toTopOf="@+id/billingAddress"
                        style="@style/Base.Widget.AppCompat.Spinner.Underlined"
                        android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:selectedItemPosition="@={FeeContextConverter.toInt(makePaymentRequest.feeContext)}"/>
                <EditText
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:inputType="textPostalAddress"
                        android:ems="10"
                        android:id="@+id/billingAddress"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/feeContext" app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintBottom_toTopOf="@+id/zipCode"
                        android:hint="@string/title_billing_address_street"
                        tools:ignore="Autofill" android:singleLine="true"
                        android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@={makePaymentRequest.billingAddressStreet}"/>
                <EditText
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:inputType="text"
                        android:ems="10"
                        android:id="@+id/zipCode"
                        android:hint="@string/title_billing_zip" android:singleLine="true"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/billingAddress"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintBottom_toTopOf="@+id/accountGroupCode"
                        tools:ignore="Autofill"
                        android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@={makePaymentRequest.billingZip}"/>
                <EditText
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:inputType="textPersonName"
                        android:ems="10"
                        android:id="@+id/accountGroupCode"
                        android:hint="@string/title_account_group_code"
                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/zipCode" app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintBottom_toTopOf="@+id/minAmount"
                        tools:ignore="Autofill" android:singleLine="true"
                        android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@={makePaymentRequest.accountGroupCode}"/>
                <EditText
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/minAmount"
                        android:hint="@string/title_min_amount_due"
                        app:layout_constraintTop_toBottomOf="@+id/accountGroupCode"
                        app:layout_constraintBottom_toTopOf="@+id/accountBalance"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"
                        tools:ignore="Autofill" android:singleLine="true"
                        android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@={AmountConverter.toString(minAmount, makePaymentRequest.minAmountDue)}"/>
                <EditText
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:inputType="numberDecimal"
                        android:ems="10"
                        android:id="@+id/accountBalance"
                        android:hint="@string/title_account_balance"
                        app:layout_constraintTop_toBottomOf="@+id/minAmount"
                        app:layout_constraintBottom_toTopOf="@+id/clientRefData"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"
                        tools:ignore="Autofill" android:singleLine="true"
                        android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@={AmountConverter.toString(accountBalance, makePaymentRequest.accountBalance)}"/>
                <EditText
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:inputType="text|textPersonName"
                        android:ems="10"
                        android:id="@+id/clientRefData"
                        android:hint="@string/title_client_reference_data1"
                        app:layout_constraintTop_toBottomOf="@+id/accountBalance"
                        app:layout_constraintBottom_toTopOf="@+id/openDialog"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5"
                        tools:ignore="Autofill" android:singleLine="true"
                        android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
                        android:layout_marginRight="8dp"
                        android:text="@={makePaymentRequest.clientReferenceData1}"/>
                <Button
                        android:text="@string/title_open_dialog_button"
                        android:layout_width="0dp"
                        android:layout_height="55dp"
                        android:id="@+id/openDialog"
                        style="@style/Widget.AppCompat.Button.Borderless" android:background="@color/colorPrimary"
                        android:textColor="#ffffff" android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/clientRefData"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintHorizontal_bias="0.0" app:layout_constraintEnd_toEndOf="parent"
                        android:onClick="onClick"
                        android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginRight="16dp" android:layout_marginTop="24dp" android:enabled="false"/>
            </android.support.constraint.ConstraintLayout>
        </ScrollView>
        <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintVertical_bias="0.498"/>
    </android.support.constraint.ConstraintLayout>
</layout>